[package]
name = "aa-proxy-test-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "aa:packet"

[package.metadata.component.target]
path = "wit"
world = "packet-hook"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
protobuf = "3.7.1"

[build-dependencies]
protoc-bin-vendored = "3.1.0"
protobuf-codegen = "3.7.1"